--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation group: 'io.github.cdimascio', name: 'java-dotenv', version: '5.1.3'
     implementation group: 'io.ipinfo', name: 'ipinfo-api', version: '1.1'
     implementation group: 'net.explodingbus' + 'h.KSoft4J', name: 'KSoft4J', version: '1.0.6'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.2'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
 }
 
 shadowJar {
