--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 mainClassName = 'me.trackrunny.jdalearning.Bot'
 
-version '1.14.9'
+version '1.15.9'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 
@@ -25,6 +25,8 @@ dependencies {
     implementation group: 'net.explodingbus' + 'h.KSoft4J', name: 'KSoft4J', version: '1.0.6'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.31.1'
+    implementation group: 'com.github.ricksbrown', name: 'cowsay', version: '1.1.0'
+    implementation group: 'com.github.ricksbrown', name: 'cowjar-extra', version: '1.1.0'
 }
 
 shadowJar {
